macros/src/snapshots/balsaq_macros__expand_group__tests__generates_placeholder_constants.snap
---
source: macros/src/expand_group.rs
expression: "run(quote! { pub struct Point { pub x: i64, pub y: i64, } })"
---
pub struct Point {
    pub x: i64,
    pub y: i64,
}
impl ::balsaq::ColumnGroup for Point {
    const DDL: &'static str = ::balsaq::__cf::concatcp!(
        "    {P}x ", ::balsaq::__cf::str_replace!(< i64 as ::balsaq::Column > ::SQL_TYPE,
        "{col}", "{P}x"), ::balsaq::__nn_placeholder(< i64 as ::balsaq::Column >
        ::NULLABLE), ",\n", "    {P}y ", ::balsaq::__cf::str_replace!(< i64 as
        ::balsaq::Column > ::SQL_TYPE, "{col}", "{P}y"), ::balsaq::__nn_placeholder(< i64
        as ::balsaq::Column > ::NULLABLE)
    );
    const COLS: &'static str = "{P}x, {P}y";
    const VALS: &'static str = ":{P}x, :{P}y";
    const NULLABLE: bool = false;
    fn cg_read(row: &::rusqlite::Row<'_>, prefix: &str) -> ::rusqlite::Result<Self> {
        Ok(Self {
            x: row.get(format!("{prefix}{}", "x").as_str())?,
            y: row.get(format!("{prefix}{}", "y").as_str())?,
        })
    }
    fn cg_write<'a>(
        &'a self,
        prefix: &str,
        out: &mut ::std::vec::Vec<
            (::std::string::String, &'a dyn ::rusqlite::types::ToSql),
        >,
    ) {
        out.push((
            format!(":{prefix}{}", "x"),
            &self.x as &dyn ::rusqlite::types::ToSql,
        ));
        out.push((
            format!(":{prefix}{}", "y"),
            &self.y as &dyn ::rusqlite::types::ToSql,
        ));
    }
    fn cg_read_optional(
        row: &::rusqlite::Row<'_>,
        prefix: &str,
    ) -> ::rusqlite::Result<::std::option::Option<Self>> {
        if matches!(
            row.get_ref(format!("{prefix}{}", "x") .as_str()) ?,
            ::rusqlite::types::ValueRef::Null
        )
            && matches!(
                row.get_ref(format!("{prefix}{}", "y") .as_str()) ?,
                ::rusqlite::types::ValueRef::Null
            )
        {
            ::std::result::Result::Ok(::std::option::Option::None)
        } else {
            ::std::result::Result::Ok(
                ::std::option::Option::Some(Self {
                    x: row.get(format!("{prefix}{}", "x").as_str())?,
                    y: row.get(format!("{prefix}{}", "y").as_str())?,
                }),
            )
        }
    }
    fn cg_write_null<'a>(
        prefix: &str,
        out: &mut ::std::vec::Vec<
            (::std::string::String, &'a dyn ::rusqlite::types::ToSql),
        >,
    ) {
        static NULL: ::rusqlite::types::Null = ::rusqlite::types::Null;
        out.push((format!(":{prefix}{}", "x"), &NULL as &dyn ::rusqlite::types::ToSql));
        out.push((format!(":{prefix}{}", "y"), &NULL as &dyn ::rusqlite::types::ToSql));
    }
}
